assets/static/css/site.css
body {
  background-color: #e5e5e5;
  font-family: 'Times New Roman';
  letter-spacing: initial;
  font-weight: initial;
  line-height: initial;
  font-size: initial;
  text-align: justify;
}
h1, h2, h3, h4, h5, h6, ol, ul {
  text-align: left;
  letter-spacing: initial;
  text-transform: initial;
}
.container {
  background-color: #FFFFFF;
}
.site-header-name {
  text-align: center;
}
.nav-bar {
  margin-bottom: 1em;
}
.site-footer {
  padding: 0;
  background-color: initial;
  border-top: 1px solid #e5e5e5;
}
.site-footer .row {
  margin-left: 0px;
  margin-right: 0px;
}
.site-footer .row div {
  margin-top: auto;
  margin-bottom: auto
}
.site-footer img {
  max-width: 100%;
  max-height: 100%;
  height: 85px;
  padding-top: 15px;
}
@media (min-width:768px) {
  .cr-footer {
    text-align: left;
  }
  .links-footer {
    text-align: right;
  }
}

.nav>a {
  color: black;
  font-weight: bold;
}

.sidebar-links {
  padding-left: 20px;
}

#alphabetical-index-jumpbox {
  text-align: center;
}
#alphabetical-index-jumpbox > table {
  width: 100%;
}

.of-the-day-month h5 {
  text-align: center;
}
.of-the-day-month table {
  text-align: center;
  width: 100%;
}

.project-navigation {
  text-align: center;
}

.biography-thumbnail {
  width: 145px;
}
.biography-thumbnail-container {
  text-align: center;
}

.curve-equation {
  color: blue;
}

img {
  max-width: 100%;
  max-height: 100%;
}

.pictdisplay.row {
  text-align: center;
}
.pictdisplay.row p {
  text-align: center;
}
.pictdisplay.row img {
  padding: 10px;
}

#_Loader-status {
  display: none;
}
#testApplet_infotablediv {
  display: none!important;
}
#sysoutdiv {
  display: none;
}

#map {
  width: 100%;
  height: 500px;
}

.curve-container {
  text-align: center;
}
.curve-container img {
  border: 1px solid black;
}

.pictureindex-col {
  text-align: center;
  margin-top: 10px;
  margin-bottom: 10px;
}
.pictureindex-thumbnail {
  height: 125px;
}

#search-results h4 {
  margin-bottom: -4px;
  text-transform: none;
  letter-spacing: 1px;
}

/* give some spacing between the columns when they go vertical */
.col-md-1:not(:first-child), .col-md-2:not(:first-child), .col-md-3:not(:first-child), .col-md-4:not(:first-child), .col-md-5:not(:first-child), .col-md-6:not(:first-child), .col-md-7:not(:first-child), .col-md-8:not(:first-child), .col-md-9:not(:first-child), .col-md-10:not(:first-child), .col-md-11:not(:first-child) {
  margin-top: 1em;
}
@media (min-width:768px) {
  .col-md-1:not(:first-child), .col-md-2:not(:first-child), .col-md-3:not(:first-child), .col-md-4:not(:first-child), .col-md-5:not(:first-child), .col-md-6:not(:first-child), .col-md-7:not(:first-child), .col-md-8:not(:first-child), .col-md-9:not(:first-child), .col-md-10:not(:first-child), .col-md-11:not(:first-child) {
    margin-top: 0;
  }
}

.bmc-speaker-name {
  padding-right: 20px;
  width: 150px;
  text-align: right;
}
.bmc-speaker-talk {
  font-style: italic;
}

